ChangeLog

20050906
        -src/precession.c

	Add ln_get_equ_prec2 to calculate precission between arbitary dates.

	-src/libnova/ln_types.h

	JD2000 #define.

	Petr Kubanek

20050717
	-src/rise_set.c
	-src/libnova/rise_set.h

	Add LN_SIDEREAL_DAY_SEC and LN_SIDEREAL_DAY_DAY #defines, fix error
	in ln_get_object_next_rst (infinite loop in while on some special
	occasions).

	Petr Kubanek

*********** release of 0.11.0

20050705
	- *
	
	Updated copyright and LGPL.

20050704
	-src/julian_day.c
	
	Bug fix for ln_zonedate_to_date, not setting date ptr.

20050616
	-src/julian_day.c
	
	Bug fix for rounding error in time_t to JD and vice versa. 

20050609

	- src/julian_day.c
	- lntest/test.c

	Bug fix ln_date_to_zonedate, added tests for
	ln_date_to_zonedate.
	
20050609

	-src/libnova/ln_types.h
	-src/utility.h
	-ln_test/test.c
	
	Added neg bit in ln_dms for small > -1 neg angles. Not sure why
	this had got back in ?

20050609

	- src/libnova/proper_motion.h
	- src/proper_motion.c

	Added variable epoch proper motion func and added units to documentation. 


20050607
	- src/libnova/ln_types.h
	- src/libnova/julian_day.c
	- src/julian_day.c
	- examples/lunar.c
	- examples/sun.c
	- examples/mars.c
	- examples/asteroid.c
	- lntest/test.c

	Added ln_zonedate & supporting functions, change examples,
	added test to lntest.

	- lntest/test.c

	Call usleep between sucessive calls to get_jd (so ./test
	should pass on fast CPU as well).

	- debian/*

	Added Debian build directory.

	Petr Kubanek

20050506
	- src/refraction.c
	
	Fixed bug in refraction calculation.
	
	Radu Corlan

20050503
	- src/libnova/ln_types.h, src/utility.h

	Removed bitfields

	lg


20040712
	- src/transform.c, src/libnova/ln_types.h, src/libnova/transform.h

	Beta Galactics Coordinates support.

	Petr Kubanek

20040712
	-numerous
	
	Refactored sun -> solar in API
	
	lg


*********** release of 0.10.1

20040906
	-src/libnova/solar.h
	
	Removed private function from header

	Liam Girdwood

20040906